# comfyui_wildcards

./: README.md  __init__.py  pyproject.toml  wildcards.py
examples/: lgc-cloths.txt
wildcards/: haircolor.txt  lgc-smile.txt
